# Nitro

./: CLAUDE.md  Cargo.toml  INSTALL.md  Makefile  Nitro.md  README.md  TESTING.md  install-dev.sh  install-local.sh  install.sh  nitro-dev  test_local.sh  test_nitro.sh
.github/workflows/: release.yml
homebrew/: nitro.rb
src/: lib.rs  main.rs
src/cache/: mod.rs
src/cli/: mod.rs
src/cli/commands/: homebrew.rs  info.rs  install.rs  list.rs  mod.rs  search.rs  tap.rs  uninstall.rs  update.rs
src/core/: errors.rs  formula.rs  installer.rs  mod.rs  package.rs  resolver.rs  tap.rs
src/download/: mod.rs
src/search/: mod.rs
src/ui/: display.rs  mod.rs  progress.rs
test_env/: nitro_test
tests/: integration_test.rs
